--- a/GA_1_FASHION_BLOG/index.html
+++ b/GA_1_FASHION_BLOG/index.html
@@ -1,70 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
-        <link rel="stylesheet" href="css/main.css" type="text/css">
-     	<title>Fashion_Blog.png</title>               
-  </head>
-  <body>
-     <h1> Sartre's List
-     </h1>
-     <h3> Better-Dressed People
-     </h3>
-        <nav> 
-          <div>
-            <a class="headmenu" href=#here>Women's</a> 
-            <a class="headmenu" href=#here>Men's</a>  
-            <a class="headmenu" href=#here>OntheStreet</a>   
-            <a class="headmenu" href=#here>TheCatwalk</a>  
-            <a class="headmenu" href=#here>AdWatch</a>  
-            <a class="headmenu" href=#here>About</a>
-          </div>                   
-          <br />
-          <br />
-        </nav>
-          <div class="date"> 11/12/13 
-          </div>
-     <h2 class="firsttitle">On the Street in Brooklyn
-     </h2>
-        <img src="img/fashion_photo.jpeg"</img>
-         <p>
-          <span> C  </span>  ray culpa stumptown, flexitarian exOdd Future de fugiat Wes Anderson proident 3 wolf moon officia bitters small batch. Et consequat do, nulla you probably haven't heard of them. High Life scenester. Vinyl fugiat High Life, kogio do VHS in aliqua lo-fi leggings gentrify Neutra tumblr. Odio vegan PBR, Marfa forage blue bottle try-hard readymade meggings retro delectus. Echo Park. Ugh consectetur farm-to-table forage, laboris bluebottle McSweeney's tatooed excepteur yr. Magna ut Schlitz flexitarian, vinyl craft beer proident yr forage 8-bit ethical sustainable placeat retro.  Officia pickled beard, adipisicing gluten-free sint craft beer quis thundercats id 3 wolf moon fashion axe.
-        </p>
-        <div id="next">Continues...</div>
-        <hr></hr>
-          <br />
-          <br />
-        <div class="date">11/11/13
-        </div>
-     <h2 class="secondtitle">Vintage in Vogue
-     </h2>
-        <img src="img/fashion_photo2.jpeg"</img>
-  		  <p> 
-          <span> S  </span>elfies sunt Tumblr, delectus small batch DIY umami sint.  Polaroid chambray selfies McSweeney's Cosby sweater+Pitchfork tattooed assumenda Wes Anderson Blue Bottle twee Carles ennui. Nisi locavore fugiat sapiente salvia aliqua. Shoreditch kogi exercitation fashion axe.  Wolf semiotics Pinterest, laboris quis master cleanse tousled small batch street art bespoke fingerstache dreamcatcher ethical labore.  Dreamcatcher iPhone typewriter , tote bag four loko fanny pack master cleanse organic PBR reprehenderit actually, Craft beer drinking vinegar wayfarers, pork belly narwhal pariatur polaroid cupidatat in 8-bt distillery anim literally. 
-        </p>
-        <div id="next">Continues...</div>
-        <hr></hr>
-          <br />
-        <nav>
-          <div class="category"> 
-            <a class="footertitle">Home</a> 
-            <h class="footerdivider">|</h> 
-            <a class="footertitle">Women's</a> 
-            <h class="footerdivider">|</h>  
-            <a class="footertitle">Men's</a> 
-            <h class="footerdivider">|</h> 
-            <a class="footertitle">On the Street</a> 
-            <h class="footerdivider">|</h>  
-            <a class="footertitle">The Cat Walk</a> 
-            <h class="footerdivider">|</h> 
-            <a class="footertitle">AdWatch</a> 
-            <h class="footerdivider">|</h> 
-            <a class="footertitle">About</a> 
-            <h class="footerdivider">|</h>  
-            <a class="footertitle">Tips</a>
-          </div>
-      </nav>
-         <br />
-         <div id="signature">&copy;2013 Valet Industies, Inc.</div>
-  </body>    
+<head>
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+   	<title>Fashion_Blog.png</title>               
+</head>
+<body>
+  <h1>Sartre's List</h1> <!-- Consider wrapping this whole section in a <header> tag -->
+  <h3>Better-Dressed People</h3> <!-- No need to break these tags open if they're not containing any other elements -->
+  <nav> 
+    <div> <!-- No need to have this div tag if this seciton is aleady wrapped in a nav tag -->
+      <a class="headmenu" href=#here>Women's</a> 
+      <a class="headmenu" href=#here>Men's</a>  
+      <a class="headmenu" href=#here>OntheStreet</a>   
+      <a class="headmenu" href=#here>TheCatwalk</a>  
+      <a class="headmenu" href=#here>AdWatch</a>  
+      <a class="headmenu" href=#here>About</a>
+    </div>                   
+    <br /> <!-- Try using margin bottom instead of </br> tags. It'll keep you from writing too much html markup -->
+    <br />
+  </nav>
+  <div class="date"> 11/12/13 </div> <!-- Consider making this an h2 or h3 tag -->
+  <h2 class="firsttitle"> On the Street in Brooklyn</h2> <!--You might want to wrap the content section in a <main> tag. Will help you seperate your code. You can also wrap each individual post in an <article> tag. More seperation is always better! -->
+  <img src="img/fashion_photo.jpeg"</img>
+  <p><span> C  </span>  ray culpa stumptown, flexitarian exOdd Future de fugiat Wes Anderson proident 3 wolf moon officia bitters small batch. Et consequat do, nulla you probably haven't heard of them. High Life scenester. Vinyl fugiat High Life, kogio do VHS in aliqua lo-fi leggings gentrify Neutra tumblr. Odio vegan PBR, Marfa forage blue bottle try-hard readymade meggings retro delectus. Echo Park. Ugh consectetur farm-to-table forage, laboris bluebottle McSweeney's tatooed excepteur yr. Magna ut Schlitz flexitarian, vinyl craft beer proident yr forage 8-bit ethical sustainable placeat retro.  Officia pickled beard, adipisicing gluten-free sint craft beer quis thundercats id 3 wolf moon fashion axe.</p>
+  <div id="next">Continues...</div> <!-- Consider using a <span> instead. -->
+  <hr/> <!--<hr/> tags are self closing -->
+    <br /> <!-- Try using margin bottom instead of </br> tags. It'll keep you from writing too much html markup -->
+    <br />
+  <div class="date">11/11/13</div> <!-- Consider making this an h2 or h3 tag -->
+  <h2 class="secondtitle">Vintage in Vogue</h2> <!--  No need to break open the <h2> tag if it's not containing any other elements -->
+  <img src="img/fashion_photo2.jpeg"</img>
+  <p><span> S  </span> <!--Perfect use of span tag--> elfies sunt Tumblr, delectus small batch DIY umami sint.  Polaroid chambray selfies McSweeney's Cosby sweater+Pitchfork tattooed assumenda Wes Anderson Blue Bottle twee Carles ennui. Nisi locavore fugiat sapiente salvia aliqua. Shoreditch kogi exercitation fashion axe.  Wolf semiotics Pinterest, laboris quis master cleanse tousled small batch street art bespoke fingerstache dreamcatcher ethical labore.  Dreamcatcher iPhone typewriter , tote bag four loko fanny pack master cleanse organic PBR reprehenderit actually, Craft beer drinking vinegar wayfarers, pork belly narwhal pariatur polaroid cupidatat in 8-bt distillery anim literally. </p>
+  <div id="next">Continues...</div> <!-- Consider using a <span> instead. -->
+  <hr/> <!--<hr/> tags are self closing -->
+  <br/> <!-- Try using margin bottom instead of </br> tags. It'll keep you from writing too much html markup -->
+  <nav> <!-- Consider wrapping the <nav> tag, and the <div> tag below, in a <footer> tag. Will help to seperate your code. -->
+    <div class="category"> <!-- No need to have an extra div here. You could just add a class to the <nav> tag above -->
+      <a class="footertitle">Home</a> 
+      <h class="footerdivider">|</h> <!-- I don't think an <h> tag is a real html tag :) This looks great on the site, but you're doing double duty with the extra set of tags. Try creating a new class called "divider-right", which gives an element a border-right of "1px solid grey". Apply that class to all the elements in your bottom nav that need a divider. -->
+      <a class="footertitle">Women's</a> 
+      <h class="footerdivider">|</h>  
+      <a class="footertitle">Men's</a> 
+      <h class="footerdivider">|</h> 
+      <a class="footertitle">On the Street</a> 
+      <h class="footerdivider">|</h>  
+      <a class="footertitle">The Cat Walk</a> 
+      <h class="footerdivider">|</h> 
+      <a class="footertitle">AdWatch</a> 
+      <h class="footerdivider">|</h> 
+      <a class="footertitle">About</a> 
+      <h class="footerdivider">|</h>  
+      <a class="footertitle">Tips</a>
+    </div>
+  </nav>
+  <br />
+  <div id="signature">&copy;2013 Valet Industies, Inc.</div> <!-- Consider using a span here -->
+</body>    
 </html>
-
