--- a/GA_0_ABOUT_ME/index.html
+++ b/GA_0_ABOUT_ME/index.html
@@ -22,7 +22,7 @@
         text-decoration: underline; 
         }
         -->
-              <p id="L"/>I am someone who has been undergoing alot of change this year, and I am discovering who I really am with everything that is happening!  I am someone who is digging deep to find my next big adventure in life!  </p>
+              <p id="L">I am someone who has been undergoing alot of change this year, and I am discovering who I really am with everything that is happening!  I am someone who is digging deep to find my next big adventure in life!  </p>
 <!--lets make our id names a bit more descriptive.  A single letter might not make sense to you or other developers. So
 maybe instead of id="L", use id="firstParagraph"-->
               <p id="special1"> This year I bought a house, lost a job, bought a new mini cooper countryman,starting using a MAC, tried river rafting and kayaking, and started to really look at some of the things I never really looked at carefully, like finances, and I began to clean house so to speak! </p>
